PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.5

- CLI Server:
  . Fixed bug #69953 (Support MKCALENDAR request method). (Christoph)

- Core:
  . Fixed bug #71729 (Possible crash in zend_bin_strtod, zend_oct_strtod,
    zend_hex_strtod). (Laruence)
  . Fixed bug #71695 (Global variables are reserved before execution).
    (Laruence)
  . Fixed bug #71629 (Out-of-bounds access in php_url_decode in context
    php_stream_url_wrap_rfc2397). (mt at debian dot org)
  . Fixed bug #71622 (Strings used in pass-as-reference cannot be used to
    invoke C::$callable()). (Bob)
  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)
  . Fixed bug #71535 (Integer overflow in zend_mm_alloc_heap()). (Dmitry)
  . Fixed bug #71470 (Leaked 1 hashtable iterators). (Nikita)
  . Fixed bug #71575 (ISO C does not allow extra ‘;’ outside of a function).
    (asgrim)
  . Fixed bug #71724 (yield from does not count EOLs). (Nikita)

- Curl:
  . Fixed bug #71694 (Support constant CURLM_ADDED_ALREADY). (mpyw)

- libxml:
  . Fixed bug #71536 (Access Violation crashes php-cgi.exe). (Anatol)

- ODBC:
  . Fixed bug #47803, #69526 (Executing prepared statements is succesfull only
    for the first two statements). (einavitamar at gmail dot com, Anatol)

- PCRE:
  . Fixed bug #71659 (segmentation fault in pcre running twig tests).
    (nish dot aravamudan at canonical dot com)

- PDO_DBlib:
  . Bug #54648 (PDO::MSSQL forces format of datetime fields).
    (steven dot lambeth at gmx dot de, Anatol)

- Phar:
  . Fixed bug #71625 (Crash in php7.dll with bad phar filename).
    (Anatol)
  . Fixed bug #71317 (PharData fails to open specific file). (Jos Elstgeest)

- phpdbg:
  . Fixed crash when advancing (except step) inside an internal function. (Bob)

- SPL: